--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url('/Users/ann/Desktop/Web Development/CSS- My Site/images/background.jpg');
+  background-image: url('images/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
