--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url('../../images/background.jpg');
+  background-image: url('https://blusignalsystems.com/wp-content/uploads/2016/12/Savin-NY-Website-Background-Web1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
