--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,9 @@
-html {
-  background-image: url('https://blusignalsystems.com/wp-content/uploads/2016/12/Savin-NY-Website-Background-Web1.jpg');
+
+body {
+  background-image: url("../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-}
-
-body {
   color: #40514E;
   margin: 0;
   text-align: center;
